.k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: %CIRCLE_PROJECT_REPONAME%-deploy
  namespace: default
spec:
  replicas: %CONTAINER_REPLICAS%
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: %CIRCLE_PROJECT_REPONAME%
  template:
    metadata:
      labels:
        app: %CIRCLE_PROJECT_REPONAME%
    spec:
      automountServiceAccountToken: false
      containers:
        - image: gcr.io/%GOOGLE_PROJECT_ID%/%CIRCLE_PROJECT_REPONAME%:$(git log -n 1 --pretty=format:"%H")
          name: %CIRCLE_PROJECT_REPONAME%
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
