.k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: %CIRCLE_PROJECT_REPONAME%-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    - host: campaign.samisaude.com.br
      http:
        paths:
          - backend:
              service:
                name: %CIRCLE_PROJECT_REPONAME%-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - campaign.samisaude.com.br
      secretName: samisaude-tls
